--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bilgehanars/albatur",
+  "name": "bilgehanars/albatu",
   "description": "Extension Market For Flarum",
   "keywords": [
     "flarum"
@@ -7,7 +7,7 @@
   "type": "flarum-extension",
   "license": "MIT",
   "require": {
-    "flarum/core": "^0.1.0-beta.14"
+    "flarum/core": "^0.1.0"
   },
   "authors": [
     {
@@ -18,7 +18,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Bilgehanars\\ExtMar\\": "src/"
+      "Bilgehanars\\Albatu\\": "src/"
     }
   },
   "extra": {
