--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bilgehanars/albatur",
+  "name": "bilgehanars/albatu",
   "description": "Extension Market For Flarum",
   "keywords": [
     "flarum"
@@ -18,7 +18,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Bilgehanars\\ExtMar\\": "src/"
+      "Bilgehanars\\albatu\\": "src/"
     }
   },
   "extra": {
